package com.wali.live.proto;
import "CommonChannel.proto";
option java_package = "com.wali.live.proto";
option java_outer_classname = "ListProto";

message GetChannelLiveDetailReq {
    required uint32 channelId = 1;
    optional uint64 uid = 2; //拉列表的用户id
}

message GetChannelLiveDetailRsp {
    required uint32 ret = 1; //返回码
    repeated Item item = 2; //数据
}

message Item {
    required uint32 type = 1; //类型 1.直播
    repeated bytes data = 2; //数据, type=1时，是LiveInfo
}

/******** 9 zhibo.list.followlive 拉关注直播列表 ********/
message GetFollowLiveReq {
    required uint64 uId = 1;  //用户id
}

message GetFollowLiveRsp {
    required uint32 ret     = 1;  //返回码
    repeated LiveInfo lives = 2;  //关注的人直播信息
}